<resources>
    <!--Common Strings-->
    <string name="app_name">gym-logger</string>

    <!--login strings-->
    <string name="screen_name">Gym Logger</string>
    <string name="forgot_password_1">Forgot Password?</string>
    <string name="forgot_password_2">Click Here?</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>


</resources>